[package]
name = "kamp"
version = "0.1.2-dev"
authors = ["Vladimir Bauer <vbauerster@gmail.com>"]
description = "kamp is a tool to control kakoune editor from the command line"
repository = "https://github.com/vbauerster/kamp"
keywords = ["kakoune"]
categories = ["command-line-utilities"]
license = "Unlicense"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "kamp"

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
crossbeam-channel = "0.5.6"
thiserror = "1.0.38"

[profile.release]
lto = true
strip = true
