[package]
name = "kamp"
version = "0.2.1-dev"
authors = ["Vladimir Bauer <vbauerster@gmail.com>"]
description = "kamp is a tool to control kakoune editor from the command line"
repository = "https://github.com/vbauerster/kamp"
keywords = ["kakoune"]
categories = ["command-line-utilities"]
license = "Unlicense"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "kamp"

[dependencies]
anyhow = "1.0.70"
argh = "0.1.10"
crossbeam-channel = "0.5.7"
thiserror = "1.0.40"

[profile.release]
lto = true
strip = true
