[package]
name = "kamp"
version = "0.2.4-dev"
authors = ["Vladimir Bauer <vbauerster@gmail.com>"]
description = "kamp is a tool to control kakoune editor from the command line"
repository = "https://github.com/vbauerster/kamp"
keywords = ["kakoune"]
categories = ["command-line-utilities"]
license = "Unlicense"
edition = "2024"
rust-version = "1.88" # let chains

[[bin]]
path = "src/main.rs"
name = "kamp"

[dependencies]
anyhow = "1.0.70"
argh = "~0.1.9"
thiserror = "2.0.3"

[profile.release]
lto = true
strip = true
